feat: Player UI
Player UI 개발 및 Thumbnail 데이터로 이미지 로딩

--- a/app/mobile/src/main/AndroidManifest.xml
+++ b/app/mobile/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
+            android:launchMode="singleTask"
             android:theme="@style/Theme.JayTv"
             android:configChanges="keyboardHidden|orientation|screenSize">
             <intent-filter>
