feat: Compose Navigation 적용
Compose Navigation 적용 및 hilt library 도 추가
Home Screen -> Player Screen 으로 이동하는 그래프
AssistedInject 도와주는 코드 개발

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,7 +24,8 @@ compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview"
 compose-ui-grapchics = { module = "androidx.compose.ui:ui-graphics" }
 compose-material3 = { module = "androidx.compose.material3:material3" }
 compose-viewmodel = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version = "2.6.2" }
-compose-navigation = { module = "androidx.navigation:navigation-compose", version = "2.7.2" }
+compose-navigation = { module = "androidx.navigation:navigation-compose", version = "2.7.3" }
+compose-navigation-hilt = {module = "androidx.hilt:hilt-navigation-compose", version ="1.0.0"}
 compose-tv-foundation = { module = "androidx.tv:tv-foundation", version.ref = "compose-tv" }
 compose-tv-material = { module = "androidx.tv:tv-material", version.ref = "compose-tv" }
 
