[Feat] Home Screen (#12)
* feat: Play Screen

kotest 의존성 추가.

* feat: Add Orbit, Mockito

MVI 패턴 적용을 위한 Orbit 라이브러리 추가.
Mock 객체를 이용해서 테스트를 작성하기 위해 Mockito 추가.
(Kotest 에서 Mockk을 사용하면 느린데, Mockito를 사용하면 빨라진다고 함)

* chore : Remove kotest

새로운 Orbit Test frame work를 사용하기 위해 kotest를 버리고 junit으로 변경.

* chore : Add RxKotlin

RxKotlin 과 coroutine rx util 추가.

* feat: Link Presentation - Domain - Data

비디오 플레이 리스트를 가져오는 Use Case 구현

* refactor: Playlist 모듈 구조 변경

* feat: Player UI

Player UI 개발 및 Thumbnail 데이터로 이미지 로딩

* feat: Player UI 개발

Playlist 아이템 클릭 시 재생되는 기능 개발

* feat: Compose Navigation 적용

Compose Navigation 적용 및 hilt library 도 추가
Home Screen -> Player Screen 으로 이동하는 그래프
AssistedInject 도와주는 코드 개발

* refactor: Firebase Remote data source

Data 모듈에서 Firebase 에 대한 의존도를 삭제하고,
app 모듈에서 주입 받아 유연하게 동작하는 코드로 리팩터링

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,44 +1,65 @@
 [versions]
-# gradle version
-sdk-compile = "34"
-sdk-min = "26"
-sdk-target = "34"
-
-composeKotlinVersion = "1.5.2"
 agp = "8.1.1"
-
 kotlin = "1.9.0"
-
-composeBom = "2023.03.00"
+composeBom = "2023.09.01"
+compose-tv = "1.0.0-alpha09"
 rxKotlin = "3.0.1"
 coroutinesToRx3 = "1.7.0"
 hilt = "2.48"
+orbit = "6.1.0"
+exoplayer = "1.1.1"
+firebase = "32.3.1"
+coil = "2.4.0"
 
 #test
 kotest = "5.7.2"
+mockito = "5.1.0"
 
 [libraries]
-#androidx.core:core-ktx:1.9.0
 androidx-ktx = { module = "androidx.core:core-ktx", version.ref = "kotlin" }
-androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
-androidx-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
-androidx-compose-foundation = { group = "androidx.compose.foundation", name = "foundation" }
+compose-bom = { module = "androidx.compose:compose-bom", version.ref = "composeBom" }
+compose-activity = { module = "androidx.activity:activity-compose", version = "1.7.2" }
+compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling" }
+compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview" }
+compose-ui-grapchics = { module = "androidx.compose.ui:ui-graphics" }
+compose-material3 = { module = "androidx.compose.material3:material3" }
+compose-viewmodel = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version = "2.6.2" }
+compose-navigation = { module = "androidx.navigation:navigation-compose", version = "2.7.3" }
+compose-navigation-hilt = {module = "androidx.hilt:hilt-navigation-compose", version ="1.0.0"}
+compose-tv-foundation = { module = "androidx.tv:tv-foundation", version.ref = "compose-tv" }
+compose-tv-material = { module = "androidx.tv:tv-material", version.ref = "compose-tv" }
 
+coil = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
+coil-video = {module = "io.coil-kt:coil-video", version.ref ="coil"}
 rxKotlin = { module = "io.reactivex.rxjava3:rxkotlin", version.ref = "rxKotlin" }
 coroutinesToRx3 = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-rx3", version.ref = "coroutinesToRx3" }
-
 hilt = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
 hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hilt" }
+orbit = { module = "org.orbit-mvi:orbit-viewmodel", version.ref = "orbit" }
+orbit-compose = { module = "org.orbit-mvi:orbit-compose", version.ref = "orbit" }
+exoplayer = { module = "androidx.media3:media3-exoplayer", version.ref = "exoplayer" }
+exoplayer-dash = { module = "androidx.media3:media3-exoplayer-dash", version.ref = "exoplayer" }
+exoplayer-ui = { module = "androidx.media3:media3-ui", version.ref = "exoplayer" }
+firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebase" }
+firebase-config = { module = "com.google.firebase:firebase-config-ktx" }
+injection = { module = "javax.inject:javax.inject", version = "1" }
+kotlin-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version = "1.6.0" }
 
 #test
+junit = { module = "junit:junit", version = "4.13.2" }
+junit-ext = { module = "androidx.test.ext:junit-ktx", version = "1.1.5" }
+kotlin-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version = "1.7.3" }
 kotest = { module = "io.kotest:kotest-runner-junit5", version.ref = "kotest" }
+kotest-assertion = { module = "io.kotest:kotest-assertions-core", version.ref = "kotest" }
+mockito = { module = "org.mockito.kotlin:mockito-kotlin", version.ref = "mockito" }
+orbit-test = { module = "org.orbit-mvi:orbit-test", version.ref = "orbit" }
+android-junit-ext = { module = "androidx.test.ext:junit", version = "1.1.5" }
+android-espresso-core = { module = "androidx.test.espresso:espresso-core", version = "3.5.1" }
 
 [plugins]
 agp-app = { id = "com.android.application", version.ref = "agp" }
 agp-lib = { id = "com.android.library", version.ref = "agp" }
-
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
-
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
@@ -47,4 +68,11 @@ kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
 google-services = { id = "com.google.gms.google-services", version = "4.3.15" }
 
 [bundles]
-
+orbit = ["orbit", "orbit-compose"]
+compose-tv = ["compose-activity", "compose-tv-foundation", "compose-tv-material", "compose-viewmodel", "compose-navigation"]
+compose-mobile = ["compose-activity", "compose-material3", "compose-viewmodel", "compose-navigation", "compose-ui-tooling-preview"]
+exoplayer = ["exoplayer", "exoplayer-dash", "exoplayer-ui"]
+test-android-unit = ["junit", "junit-ext", "kotlin-test", "kotest-assertion", "orbit-test", "mockito"]
+test-unit = ["junit", "kotlin-test", "kotest-assertion", "mockito"]
+test-android-ui = ["android-junit-ext", "android-espresso-core"]
+coil = ["coil", "coil-video"]
